<resources>
    <string name="app_name">SMTU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="expanded">expanded: %s</string>
    <string name="collapsed">collapsed: %s</string>
    <string name="department_title">О кафедре</string>

    <string name="menu_news">Новости</string>
    <string name="menu_schedule">Расписание</string>
    <string name="menu_faculty">Факультеты и кафедры</string>
    <string name="menu_specialties">Направления подготовки</string>
    <string name="menu_persons">Персоналии</string>
    <string name="menu_contacts">Контакты</string>
    <array name="day_of_weeks">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вск</item>
    </array>
    <string name="form_of_training">Форма обучения</string>
    <string name="min_ball">Минимальный балл в 2019</string>
    <string name="count_spot">Количество мест</string>
    <string name="price">Стоимость</string>
    <string name="advantages">Преимущества</string>
    <string name="description_program">Описание программы</string>
    <string name="purpose_program">Цель программы</string>
    <string name="subjects">Дисциплины</string>
    <string name="teachers">Преподаватели</string>
    <string name="work_topics">Темы выпускных квалификационных работ</string>
    <string name="review">Рецензия</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="head_program">Руководитель программы</string>
    <string name="graduating_department">Выпускающая кафедра</string>
    <string name="educational_buildings">Учебные корпуса</string>
    <string name="curriculum">Учебный план</string>
    <string name="head_of_department">Заведущий кафедрой</string>
    <string name="bachelor">Бакалавриат</string>
    <string name="training_courses">Подготовительные курсы</string>
    <string name="selection_committee">Приемная комиссия</string>
    <string name="department_of_payment">Отдел оплаты образовательных услуг</string>
</resources>
