<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_items_background">
    <include
        android:id="@+id/include2"
        layout="@layout/navigation_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_admission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/layout_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/description_program"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/description_program"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/description_program_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/purpose_program"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/purpose_program"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/purpose_program_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:id="@+id/subjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/subjects"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/subjects_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/teachers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/teachers"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/teachers_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/work_topics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/work_topics"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/work_topics_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/review"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/review_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>