<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_items_background">
    <include
        android:id="@+id/include2"
        layout="@layout/navigation_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_admission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/layout_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/form_of_training"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/form_of_training"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/form_of_training_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/min_ball"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/min_ball"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/min_ball_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:id="@+id/count_spot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/count_spot"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/count_spot_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/price"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/price_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/advantages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/advantages"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/advantages_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>