<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_items_background">
    <include
        android:id="@+id/include2"
        layout="@layout/navigation_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_admission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/layout_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/contact_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/contact_person"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/contact_person_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/head_program"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/head_program"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/head_program_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:id="@+id/graduating_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/graduating_department"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/graduating_department_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/educational_buildings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/educational_buildings"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/educational_buildings_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/curriculum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/curriculum"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/curriculum_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>