<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_items_background">

    <LinearLayout
        android:id="@+id/layout_admission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/layout_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/training_courses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/training_courses"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/training_courses_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
                <TextView
                    android:id="@+id/selection_committee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/selection_committee"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/selection_committee_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:id="@+id/department_of_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/department_of_payment"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/department_of_payment_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>